assets/stylesheets/stylesheet.css
body {
  font-family: Roboto, "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 1.5;
  color: #606C71;
}

/**
 * Navigation bar styling.
 */
.menu { height: 70px; border-bottom: 1px solid #CCC; font-weight: bold }
  .menu nav a { text-decoration: none }
    .menu nav a:hover { color: #FDD600 }
  .menu .container { padding: 15px 0 }
  .logo img { height: 40px }

/**
 * Footer design.
 */
.site-footer .container { padding: 50px }

/**
 * Header designs for each game that we support.
 */
.overwatch {
  background-image: url(https://d1u1mce87gyfbn.cloudfront.net/media/wallpaper/tracer-wallpaper-wide.jpg);
  background-position: 0;
  background-size: cover;
}
  .overwatch h1 { text-shadow: 1px 1px #000 }

.destiny {
  background-image: url(https://i.imgur.com/kxP4DEU.jpg);
  background-size: cover;
}
  .destiny h1 { text-shadow: 1px 1px #000 }

